sfdx-source/force-app/main/default/objects/Provisioning_Event__e/Provisioning_Event__e.object-meta.xml
<CustomObject>
    <description>LEM-2304: Used for store provisioning. It passes a creationMethod of &quot;Automatic&quot; or &quot;Manual&quot; and a serialized list of account ids.</description>
    <label>Provisioning Event</label>
    <pluralLabel>Provisioning Events</pluralLabel>
</CustomObject>