sfdx-source/force-app/main/default/objects/Provisioning_Event__e/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <description>LEM-2304: serialized array of Account Ids.</description>
    <label>Accounts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>