sfdx-source/force-app/main/default/objects/Provisioning_Event__e/fields/COO_Graveyard_Id__c.field-meta.xml
<CustomField>
    <fullName>COO_Graveyard_Id__c</fullName>
    <description>LEM-3373 Graveyard Business Id that should be used in a Change of Ownership(COO)</description>
    <label>COO Graveyard Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>