sfdx-source/force-app/main/default/objects/Provisioning_Event__e/fields/Creation_Method__c.field-meta.xml
<CustomField>
    <fullName>Creation_Method__c</fullName>
    <description>LEM-2304: value should be either &apos;Automatic&apos; or &apos;Manual&apos;</description>
    <label>Creation Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>