sfdx-source/force-app/main/default/objects/Provisioning_Event__e/fields/WO_Type__c.field-meta.xml
<CustomField>
    <fullName>WO_Type__c</fullName>
    <description>LEM-3373 Send Work Order Type  on Platform Events</description>
    <label>WO Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>